Criado endpoint para buscar todas as cartas